--- a/RedlineApp/RedlineApp/RedlineApp/App.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/App.xaml
@@ -3,6 +3,60 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RedlineApp.App">
     <Application.Resources>
+        <ResourceDictionary>
+           
+            <!-- THEME COLORS -->
+            <Color x:Key="WhiteColor">#FFFFFF</Color>
+            <Color x:Key="BlackColor">#000000</Color>
+            <Color x:Key="BackgroundColor">#DFDFDF</Color>
+            <Color x:Key="AccentColor">#E54E47</Color>
+            <Color x:Key="SecondaryColor">#eb7a75</Color>
 
+            <Color x:Key="BlueColor">#1769aa</Color>
+
+            <!-- STYLES -->
+            <Style x:Key="HeaderTitleStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource WhiteColor}" />
+                <Setter Property="FontFamily" Value="SourceSansProRegular" />
+                <Setter Property="FontSize" Value="Title"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
+
+            <Style x:Key="TextStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="DarkGray" />
+                <Setter Property="FontFamily" Value="SourceSansProRegular" />
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource WhiteColor}"/>
+            </Style>
+
+            
+            <!-- PRIMARY BUTTON -->
+            <Style x:Key="PrimaryButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource AccentColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource WhiteColor}"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="CornerRadius" Value="5"/>
+            </Style>
+
+            <Style x:Key="SecondaryButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource SecondaryColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource WhiteColor}"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="CornerRadius" Value="5"/>
+            </Style>
+
+
+            <!-- LINK LABELS -->
+            <Style x:Key="BlueLinkLabel" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource BlueColor}"/>
+            </Style>
+
+            <Style x:Key="WhiteLinkLabel" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource WhiteColor}"/>
+            </Style>
+
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
