--- a/RedlineApp/RedlineApp/RedlineApp/View/RegisterPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/RegisterPage.xaml
@@ -128,6 +128,7 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Entry Grid.Row="0"
+                                   IsPassword="True"
                                    x:Name="PasswordEntry"
                                    Placeholder="Password"
                                    Style="{StaticResource EntryStyle}">
@@ -149,6 +150,7 @@
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Entry Grid.Row="0"
+                                   IsPassword="True"
                                    x:Name="ConfirmPasswordEntry"
                                    Placeholder="Confirm Password"
                                    Style="{StaticResource EntryStyle}">
