--- a/RedlineApp/RedlineApp/RedlineApp/View/ManageAccountPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/ManageAccountPage.xaml
@@ -2,11 +2,54 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RedlineApp.View.ManageAccountPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="MANAGE PAGE PLACE HOLDER"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+
+    <!-- Device specific content area padding. -->
+    <ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness"
+                        Android="0"
+                        iOS="0, 20, 0, 0" />
+    </ContentPage.Padding>
+
+    <!-- For reference -->
+    
+    <!--<ContentPage.Content>
+        <StackLayout BackgroundColor="{StaticResource AccentColor}">
+            <Label Text="Account Settings"
+                   Padding="10,20, 10, 20"
+                   Style="{StaticResource HeaderTitleStyle}"/>
+            <Button Text="HIDE TEST"
+                    Clicked="Button_Clicked"/>
+            <Button Text="SHOW TEST"
+                    Clicked="Button_Clicked_1"/>
+            <Frame CornerRadius="13"
+                   Margin="0, 0, 0, -10"
+                   Padding="0"
+                   VerticalOptions="FillAndExpand"
+                   BackgroundColor="{StaticResource BackgroundColor}">
+ d
+                <StackLayout x:Name="DefaultCategoryStack">
+                    <Grid Margin="0">
+                        --><!-- Form grid layout. --><!--
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        
+                        --><!-- Row 0, General settings. --><!--
+                        <Grid Grid.Row="0">
+                            <Label Text="General"
+                                   x:Name="Test"
+                                   Padding="10, 20, 0, 0"
+                                   Style="{StaticResource CategoryTitleStyle}" />
+                        </Grid>
+                    </Grid>
+                </StackLayout>
+                
+
+
+
+
+            </Frame>
+
         </StackLayout>
-    </ContentPage.Content>
+    </ContentPage.Content>-->
 </ContentPage>
