--- a/RedlineApp/RedlineApp/RedlineApp/View/MedicalInformationPage.xaml
+++ b/RedlineApp/RedlineApp/RedlineApp/View/MedicalInformationPage.xaml
@@ -3,28 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RedlineApp.View.MedicalInformationPage">
 
-    <!-- Device specific content area padding. -->
-    <ContentPage.Padding>
-        <OnPlatform x:TypeArguments="Thickness"
-                        Android="0"
-                        iOS="0, 20, 0, 0" />
-    </ContentPage.Padding>
-
     <ContentPage.Content>
-        <StackLayout BackgroundColor="{StaticResource AccentColor}">
-            <Label Text="Contact Information"
-                   Padding="10,20, 10, 20"
-                   Style="{StaticResource HeaderTitleStyle}"/>
-
-            <Frame CornerRadius="13"
-                   Margin="0, 0, 0, -10"
-                   VerticalOptions="FillAndExpand"
-                   BackgroundColor="{StaticResource BackgroundColor}">
-
-                
-
-            </Frame>
- 
+        <StackLayout>
+            <Label Text="MEDICAL PAGE"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 
